* Documentation outline for for of-config.
Change-Id: Ibd5930bca3fcd6b6c319acd426f7e78e34b5e41c
Signed-off-by: hu.rui <hu.rui2@zte.com.cn>

--- a/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
+++ b/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
@@ -58,6 +58,8 @@ include::nic/nic-user.adoc[NIC]
 
 include::sdninterfaceapp/odl-sdninterfaceapp-all-user.adoc[ODL-SDNi]
 
+include::of-config/ofconfig-user.adoc[]
+
 include::opflex/agent-ovs-user.adoc[]
 
 include::bgpcep/odl-bgpcep-pcep-all-user.adoc[PCEP]
