messaging4transport docs for Beryllium M4
Change-Id: I2b50b4c3cb1258aab3c80915fa4e73311fdb9566
Signed-off-by: Pradeeban Kathiravelu <kk.pradeeban@gmail.com>
(cherry picked from commit 6e2e103e7f6ca31ba76ea1c47f2b1813e3da6113)

--- a/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
@@ -72,6 +72,8 @@ include::l2switch/l2switch-dev.adoc[]
 
 include::lacp/lacp-dev.adoc[]
 
+include::messaging4transport/messaging4transport-developer.adoc[]
+
 include::controller/netconf/odl-netconf-dev.adoc[]
 
 include::nic/nic-dev.adoc[]
