--- a/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
+++ b/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
@@ -50,6 +50,8 @@ include::lacp/lacp-user.adoc[LACP]
 
 include::lfm/lispflowmapping-msmr-user.adoc[LISP flow mapping]
 
+include::messaging4transport/messaging4transport-user.adoc[Messaging4Transport]
+
 include::nemo/odl-nemo-engine-user.adoc[NEMO]
 
 include::netide/odl-netide-user-guide.adoc[NetIDE]
