--- a/manuals/user-guide/src/main/asciidoc/sfc/odl-sfc-ui-user.adoc
+++ b/manuals/user-guide/src/main/asciidoc/sfc/odl-sfc-ui-user.adoc
@@ -10,7 +10,7 @@ Karaf log messages as well.
 SFC-UI operates purely by using RESTCONF.
 
 .SFC-UI integration into ODL
-image::sfc/sfc-ui-architecture.png[width=250]
+image::../../resources/images/sfc/sfc-ui-architecture.png[width=250]
 
 ==== Configuring SFC-UI
 .Configuration steps
